--- a/.env.demo
+++ b/.env.demo
@@ -6,5 +6,8 @@ DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 # === Clef API Stable Diffusion ===
 SDXL_KEY=***********************************
 
-# True pour autoriser la génération d'images, False pour la bloquer (mode test)
+# === True pour autoriser la génération d'images, False pour la bloquer (mode test) ===
 IMAGE_GEN_ENABLED=True
+
+# === URL pour Ollama ===
+OLLAMA_HOST=http://ollama:11434
